# system_creeper

./: Dockerfile
.cargo/: audit.toml
.cursor/plans/: PUNCHLIST.md
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  rust.yml
agent/: Cargo.toml  agent.example.toml
agent/src/: config.rs  main.rs  metrics.rs  sender.rs
collector/: Cargo.toml  collector.example.toml
collector/src/: config.rs  main.rs  retention.rs
collector/src/api/: agents.rs  errors.rs  ingest.rs  mod.rs  thresholds.rs  ws.rs
collector/src/db/: mod.rs  queries.rs
collector/src/db/migrations/: 001_initial.sql  002_agent_tags.sql
dashboard/: Cargo.toml  index.html  package-lock.json  package.json
dashboard/src/: App.tsx  api.rs  main.rs  types.rs
dashboard/src/api/: client.ts
dashboard/src/components/: AgentCard.tsx  AgentDetail.tsx  AgentGrid.tsx  DisconnectedBanner.tsx  Header.tsx  MetricChart.tsx  MetricPanel.tsx  StatusBadge.tsx  ThresholdInput.tsx
dashboard/src/hooks/: useAgents.ts  useWebSocket.ts
dashboard/src/types/: index.ts
dashboard/src/utils/: format.ts
dashboard/static/: app.css
shared/src/: lib.rs
