[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.33"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shared = { path = "../shared" }

[dev-dependencies]
tempfile = "3"
