[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
gloo-net = "0.6"
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Location", "Storage", "HtmlSelectElement", "Document", "Element", "DomTokenList"] }
futures-util = "0.3"
js-sys = "0.3"
